run tests in each bundle
bug 339956: reduce redundancy in build and simplify target management
https://bugs.eclipse.org/bugs/show_bug.cgi?id=339956